Fix scrolling kotz on mobile

--- a/frontend/src/styles/KotzPage.module.css
+++ b/frontend/src/styles/KotzPage.module.css
@@ -251,9 +251,10 @@
       gap: 2em;
       flex: auto;
       flex-grow: 0;
+      max-width: 100vw;
 
       & > .gridItem {
-        flex-shrink: 1;
+        flex-shrink: 0;
         flex-grow: 1;
         gap: 0.5em;
         justify-content: space-between;
